@@ -172,3 +172,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040229 accessor.pl, libspectrum.c, z80.c: the Scorpion no longer has
 	 CAPABILITY_PLUS3_MEMORY.
 20040303 szx.c: the Scorpion is machine type 10 (Stuart Brady).
+20040307 z80.c: don't skip RAM page 11 when saving Scorpion snaps.
